Retrotranslator Changelog
=================================

1.2.3
---------------------------------
  - Basic support for Java 1.1, 1.2, and 1.3.
  - New option -smart to make backports inheritable.
  - Support for Java 5 methods of java.util.Properties.
  - Support for Java 5 methods of javax.net.ssl.HttpsURLConnection.
  - Limited support for java.lang.Thread.getState() and java.lang.Thread.getAllStackTraces().
  - Limited support for Java 5 methods of java.net.URLConnection and java.net.HttpURLConnection.
  - Limited support for java.util.Timer(String), java.util.Timer(String, boolean), java.util.Timer.purge().
  - Improved the -uptodatecheck functionality, especially when translating jars.
  - Fixed a bug: Interface methods that override methods from java.lang.Object didn't work in certain cases.
  - Fixed a bug: Missing constructors passed verification if such constructors had been present in base classes.
  - Upgraded to backport-util-concurrent 3.1.

1.2.2 (2007-06-25)
---------------------------------
  - Support for java.math.BigInteger.TEN.
  - Support for java.lang.Short.reverseBytes(short).
  - Support for java.lang.StackTraceElement(String, String, String, int).
  - Support for the append methods of java.io.StringWriter and java.io.CharArrayWriter.
  - Support for java.math.BigDecimal(char[]) and java.math.BigDecimal(char[], int, int). 
  - Limited support for java.lang.StringBuffer.trimToSize().
  - Limited support for java.lang.Thread.UncaughtExceptionHandler.
  - Limited support for java.nio.charset.Charset.defaultCharset().
  - Limited support for java.lang.management.ManagementFactory.getPlatformMBeanServer().
  - New option -support to enable advanced features one by one.
  - New option -uptodatecheck to skip translation of files if the destination files are newer.
  - Changed the messages printed during translation.
  - Fixed a bug with using enum values when initializing static fields of the same enum.

1.2.1 (2007-02-01)