@@ -182,8 +182,8 @@
 </tr>
 <tr>
     <td nowrap><code>-lazy</code></td>
-    <td>Asks the translator to transform only classes compiled with a target greater than
-        the <a href="#option_target">current</a> one.
+    <td>Asks the translator to transform and verify only classes compiled with a target greater than the
+        <a href="#option_target">current</a> one.
     </td>
     <td><code>false</code></td>
 </tr>
